# kv-cache-interception-and-transformation-engine

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements-modal.txt  requirements.txt
compressors/: base.py  identity.py  kivi.py  qjl.py  registry.py  rocketkv.py  rocketkv_state_snippet.py  turboquant.py
configs/: eval.yaml  modal.yaml  modal_sweeps.yaml  model.yaml
docs/: CURRENT_STATE.md  MODAL_GPU_EVAL_DESIGN.md  PHASE5_EVAL_RESULTS.md  REPRODUCIBILITY.md  SYSTEM_DESIGN.md
eval/: __init__.py  attention_score_error.py  fidelity.py  memory.py  perplexity.py  runner.py  throughput.py
framework/: __init__.py  device.py  kv_cache.py  kv_engine.py  model.py  qjl_online.py  rocketkv_online.py  storage_accounting.py
modal_app/: __init__.py  image.py  job_spec.py  merge.py  settings.py  sweep.py  worker.py
quantizers/: __init__.py  hadamard.py  lloyd_max.py  qjl.py  qjl_pipeline.py  rocketkv.py  turboquant_mse.py  turboquant_pipeline.py  turboquant_prod.py
reporting/: reporter.py
scripts/: download_model.py  export_results_documentation.py  modal_fetch_results.sh  modal_run_sweep.sh  modal_run_sweep_baseline.sh  modal_run_sweep_qjl.sh  modal_run_sweep_rocketkv.sh  modal_setup_model.sh  modal_smoke_eval.sh  restructure_modal_results.py  run_baseline.py  run_eval.py  run_turboquant_sweep.py  run_turboquant_sweep.sh  validate_turboquant.py  verify_kv_cache.py
tests/: __init__.py  test_attention_score_error.py  test_eval_runner.py  test_incremental_kv_cache.py  test_kv_cache.py  test_memory_accounting.py  test_online_inference.py  (+6 more)
(+3 files in other folders)
