[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-cache-engine"
version = "0.1.0"
description = "KV-cache interception + transformation engine with pluggable compressors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = [
  "framework*",
  "compressors*",
  "eval*",
  "data*",
  "reporting*",
  "quantizers*",
  "baselines*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
